--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "body-parser": "^1.15.0",
     "express": "4.13.4",
-    "ngrok": "2.1.7"
+    "ngrok": "2.1.7",
+    "request": "^2.71.0"
   }
 }
